Решение по ТЗ 12 спринта.